# nexus-calculator-app

./: .gitignore  DOCKER_SETUP_GUIDE_WINDOWS.md  GETTING_STARTED.md  HYBRID_ARCHITECTURE.md  README.md  REPOSITORY_CONSOLIDATION_ANALYSIS.md  index.html  package-lock.json  package.json
cli/: README.md  pyproject.toml
cli/src/nexus_cli/: __init__.py  analyzer.py  cli.py  config_loader.py
cli/tests/: test_parity.py
shared/config/: state_rules.yaml  tax_rates.yaml
shared/schemas/: state_rules.schema.json
shared/tests/: test_cases.yaml
src/: App.tsx
src/__tests__/: YearSelectionContext.test.tsx
src/components/: AnimatedProgressBar.tsx  CancellationDialog.tsx  ChunkProgressDisplay.tsx  ColumnMappingPreview.tsx  Dashboard.tsx  DetailedProgressDisplay.tsx  Disclaimer.tsx  EnhancedFileUpload.tsx  EnhancedProgressIndicator.tsx  ErrorBoundary.tsx  ExportDialog.tsx  ExportHistory.tsx  ExportPreview.tsx  ExportSystem.tsx  ExportTemplateManager.tsx  FileUpload.tsx  FileUploadWithMemoryCheck.tsx  Header.tsx  MemoryMonitor.tsx  NexusAnalysisDemo.tsx  ProcessingDashboard.tsx  ProcessingStatistics.tsx  ProcessingSummary.tsx  ProgressIndicator.tsx  ProgressPersistence.tsx  ProgressTransitions.tsx  WarningErrorCounter.tsx  WorkerStatus.tsx  YearToggleBar.tsx
src/config/: index.ts
src/constants/: stateThresholds.ts  taxRates.ts
src/context/: ProgressContext.tsx  YearSelectionContext.tsx
src/hooks/: useChunkedProcessing.ts  useFilteredData.ts  useMemoryMonitor.ts  useNexusAnalysis.ts  useProcessingStatistics.ts  useProgressTracking.ts  useWebWorker.ts
(+48 files in other folders)
